k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  type: ClusterIP
  selector:
    app: result
  ports:
    - name: result-service
      port: 80
      targetPort: 80
