k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: ClusterIP
  selector:
    app: vote
  ports:
    - name: vote-service
      port: 80
      targetPort: 80
